Fixing this— Networks page: awkward breaks on tablet vertical for entity list

--- a/_scss/bbg/_author.scss
+++ b/_scss/bbg/_author.scss
@@ -9,6 +9,10 @@
 		margin: 0 1rem .5rem 0;
 		width: $bbg__team__icon-width;
 	}
+
+	@include media($medium-screen) {
+		clear: left;
+	}
 }
 
 .bbg__avatar__container--small {
